# gh-to-org

./: .gitignore  README.md  flake.nix  lefthook.yml  org_formatter.py  pyproject.toml  test_org_formatter.py
.github/workflows/: ci.yml
src/gh_org_sync/: __init__.py  cli.py  exceptions.py  gitea_client.py  github_client.py  merger.py  models.py  org_parser.py  org_writer.py  provider.py  sync.py
tests/: __init__.py  conftest.py  test_merger.py  test_models.py  test_org_parser.py
