[project]
name = "gh-org-sync"
version = "1.0.0"
description = "Sync GitHub issues to Org-mode files with bidirectional awareness"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
authors = [
    {name = "GitHub Issues to Org"},
]
keywords = ["github", "org-mode", "emacs", "sync", "issues"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Text Editors :: Emacs",
]

dependencies = [
    "pydantic>=2.5.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.92.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
gh-org-sync = "gh_org_sync.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_org_sync"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "C4", "DTZ", "T10", "ISC", "PIE", "Q", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "ERA"]
ignore = ["S603", "S607"]  # Allow subprocess calls (needed for gh CLI)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "DTZ001"]
"test_*.py" = ["S101", "DTZ001"]
"conftest.py" = ["S101", "DTZ001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["gh_org_sync"]
branch = true

[tool.coverage.report]
fail_under = 35
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.pytest.ini_options.markers]
benchmark = "Performance benchmarks"
